mediconnect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediconnect-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: mediconnect.local
      http:
        paths:
          - pathType: Prefix
            path: "/api(/|$)(.*)"
            backend:
              service:
                name: node-backend-service
                port:
                  number: 3000

          # - pathType: Prefix
          #   path: "/kibana(/|$)(.*)"
          #   backend:
          #     service:
          #       name: kibana
          #       port:
          #         number: 5601

          - pathType: Prefix
            path: "/signal(/|$)(.*)"
            backend:
              service:
                name: webrtc-server-service
                port:
                  number: 4440

          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-web-service
                port:
                  number: 80
